--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "pnpm build:web",
+  "buildCommand": "pnpm turbo run build --filter=web",
   "devCommand": "pnpm dev:web",
   "installCommand": "pnpm install",
   "framework": "nextjs",
