--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,5 @@
   "buildCommand": "cd ../.. && pnpm turbo run build --filter=web",
   "installCommand": "pnpm install --prefix=../..",
   "framework": "nextjs",
-  "outputDirectory": "apps/web/.next"
+  "outputDirectory": ".next"
 }
